# car_demo

autoware_launch/: CMakeLists.txt  package.xml
autoware_launch/launch/: gazebo_localization.launch  gazebo_map.launch  gazebo_mission.launch
car_demo/: CMakeLists.txt
car_demo/launch/: demo.launch  demo_fake.launch  edit_world.launch
car_demo/odometry_comparator/: package.xml
car_demo/odometry_comparator/src/: compare_odom.cpp
car_demo/rviz/: demo.rviz
car_demo/worlds/: mcity2.world  mcity3.world  some_world.world
odometry_comparator/: CMakeLists.txt
odometry_comparator/msg/: gap_msgs.msg
odometry_comparator/src/: compare_odom.cpp
prius_description/urdf/: prius.urdf
send_prius_msgs/: CMakeLists.txt  package.xml
send_prius_msgs/src/: fake_sender.cpp
whiteherv_gazebo_plugin/ExtractCoordinate/: CMakeLists.txt  ExtractCoordinate2.cc  ExtractCoorindatePlugin.hh  installplugin.sh
